--- a/AspnetNote/AspnetNote.MVC6/wwwroot/css/site.css
+++ b/AspnetNote/AspnetNote.MVC6/wwwroot/css/site.css
@@ -59,8 +59,9 @@ html {
 }
 
 body {
-  /* Margin bottom by footer height */
+  /* Margin bottom by footer height */  
   margin-bottom: 60px;
+  padding-top:30px;
 }
 
 input,
